# needle-haystack

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml
needle_haystack/: __init__.py  _version.py  components.py  document_store.py  needle_embedding_retriever.py
needle_haystack/v1/: __init__.py
needle_haystack/v1/collections/: __init__.py  files.py
tests/: test_needle_haystack_collections.py  test_needle_haystack_collections_files.py  test_needle_haystack_init.py
tutorials/: needle.ipynb
